// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders TrendStat with all prop options: {"metric":{"name":"Around the world","value":360},"type":"metric"} 1`] = `
"<div class=\\"flex flex-col gap-y-2.5\\">
  <div class=\\"flex flex-grow items-end\\">
    <p class=\\"uppercase text-xs text-vanilla-400 tracking-wider font-semibold leading-7\\">
      Around the world
    </p>
  </div>
  <div class=\\"flex items-center gap-x-2 h-6 flex-shrink-0\\"><span class=\\"text-base font-semibold leading-8\\">
      360
    </span>
    <!---->
  </div>
</div>"
`;

exports[`renders TrendStat with all prop options: {"metric":{"name":"Around the world","value":360},"type":"threshold"} 1`] = `
"<div class=\\"flex flex-col gap-y-2.5\\">
  <div class=\\"flex flex-grow items-end\\">
    <p class=\\"uppercase text-xs text-vanilla-400 tracking-wider font-semibold leading-7\\">
      Threshold
    </p>
  </div>
  <div class=\\"flex items-center gap-x-2 h-6 flex-shrink-0\\"><span class=\\"text-base font-semibold leading-8\\">
      360
    </span>
    <!---->
  </div>
</div>"
`;
